--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Accenture</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Welcome to DevOps</h1>
